# Badger-hack

./: README.md  pnpm-lock.yaml
contracts/: Cargo.toml
contracts/deployments/factory_contract/: alephzero-testnet.ts  factory_contract.contract  factory_contract.json  factory_contract.wasm  shibuya.ts
contracts/deployments/greeter/: greeter.contract  greeter.json
contracts/deployments/my_psp/: alephzero-testnet.ts  my_psp.contract  my_psp.json  my_psp.wasm
contracts/deployments/my_psp22/: my_psp22.contract  my_psp22.json  my_psp22.wasm
contracts/scripts/: deploy.ts
contracts/src/factory_contract/: Cargo.toml  lib.rs
contracts/src/factory_contract/my_nft/: Cargo.toml  lib.rs
contracts/src/factory_contract/my_psp/: Cargo.toml  lib.rs
contracts/typed-contracts/build-extrinsic/: factory_contract.ts  my_psp.ts  my_psp22.ts
contracts/typed-contracts/constructors/: factory_contract.ts  my_psp.ts  my_psp22.ts
contracts/typed-contracts/contract-info/: factory_contract.ts  greeter.ts  my_psp.ts  my_psp22.ts
contracts/typed-contracts/contracts/: factory_contract.ts  my_psp.ts
contracts/typed-contracts/data/: factory_contract.json  my_psp.json  my_psp22.json
contracts/typed-contracts/event-data/: factory_contract.json  my_psp.json
contracts/typed-contracts/event-types/: factory_contract.ts  my_psp.ts
contracts/typed-contracts/events/: factory_contract.ts  my_psp.ts
contracts/typed-contracts/mixed-methods/: factory_contract.ts  my_psp.ts  my_psp22.ts
contracts/typed-contracts/query/: factory_contract.ts  my_psp.ts  my_psp22.ts
contracts/typed-contracts/tx-sign-and-send/: factory_contract.ts  my_psp.ts  my_psp22.ts
contracts/typed-contracts/types-arguments/: factory_contract.ts  my_psp.ts  my_psp22.ts
contracts/typed-contracts/types-returns/: factory_contract.ts  my_psp.ts  my_psp22.ts
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: home-page-acurast.tsx  home-page-middle-section.tsx  home-page-top-section.tsx  nav-bar.tsx  partners.tsx
frontend/src/app/components/dashboard/: CreateNFT.tsx  CreateToken.tsx  NFTOverview.tsx  NFTsComponent.tsx  NftTable.tsx  TokenOverview.tsx  TokenTable.tsx  TokensCOmponent.tsx  overview.tsx
frontend/src/app/components/dashboard/contracts/: ContractInfo.jsx  ContractOverview.tsx  Explorer.tsx  ExplorerFunctions.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/contracts/[id]/: page.tsx
frontend/src/app/hooks/: useGetAllTokens.ts  useGetToken.ts
frontend/src/components/web3/: connect-button.tsx  greeter-contract-interactions.tsx
frontend/src/config/: constants.ts
frontend/src/deployments/: deployments.ts
