[package]
name = "my_psp"
version = "1.0.0"
edition = "2021"
authors = ["Favour Aniogor"]

[dependencies]

ink = { version = "4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }


psp22 = { git = "https://github.com/Cardinal-Cryptography/PSP22", default-features = false, features = [] }


[lib]
name = "my_psp"
path = "lib.rs"


[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "psp22/std"]
ink-as-dependency = []
